--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 99;
 }
 
 .navbar {
@@ -377,7 +377,11 @@ nav {
 /**card readmore readless**/
 /*****About Section***********/
 .about_sec{
-  padding: 60px 0;
+  padding: 30px 0 60px 0;
+}
+
+.about_sec .im_title{
+  margin: 60px 0 40px 0;
 }
 
 .im_body_txt{
@@ -454,5 +458,47 @@ nav {
   }
   .img-mb{
     display: block;
+  }
+}
+
+/***********Fellow about**********/
+.fellow_about_sec{
+  padding: 60px 0;
+}
+
+.im_body_txt-bold{
+  font-weight: bold;
+}
+
+/********process**********/
+.process_sec{
+  padding: 60px 0;
+}
+
+.fellow_im_title{
+  position: relative;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.process_wrapper{
+  margin: 0 auto;
+}
+
+.fellow_im_title::before{
+  position: absolute;
+  content: '';
+  z-index: 1;
+  width: 40px;
+  height: 5px;
+  background-color: #f57826;
+  left: 49%;
+  bottom: 50px;
+  border-radius: 5px;
+}
+
+@media screen and (max-width:600px) {
+  .fellow_im_title::before{
+    left: 42%;
   }
 }
