--- a/css/style.css
+++ b/css/style.css
@@ -394,8 +394,12 @@ nav {
 
 /****work Section*****/
 .work_sec{
-  padding: 60px 0;
+  padding: 30px 0 60px 0;
   background-color: #001c39;
+}
+
+.work_sec .im_title{
+  margin: 60px 0 40px 0;
 }
 
 .im_title-white,
