--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,14 @@ nav {
   text-align: center;
 }
 
+.im_li_txt{
+  font-size: 17px;
+  line-height: 24px;
+  color: #8f96a1;
+  text-align: center;
+  list-style-type: none;
+}
+
 /****work Section*****/
 .work_sec{
   padding: 30px 0 60px 0;
