--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ nav {
 .about_info {
   text-align: center;
   font-weight: 400;
-  color: #8f96a1;
+  color: #5c6066;
 }
 
 .footer_section {
@@ -386,7 +386,7 @@ nav {
 .im_body_txt{
   font-size: 17px;
   line-height: 24px;
-  color: #8f96a1;
+  color: #5c6066;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -394,7 +394,7 @@ nav {
 .im_li_txt{
   font-size: 17px;
   line-height: 24px;
-  color: #8f96a1;
+  color: #5c6066;
   text-align: center;
   list-style-type: none;
 }
