--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,39 @@ nav {
     left: 42%;
   }
 }
+
+/*****************btn fellow************/
+.join_btn_conatiner{
+  max-width: 420px;
+  margin:  40px auto auto auto;
+}
+.btn_fellow{
+  background-color: #f57826;
+  color: #001c39;
+  font-weight: 900;
+  line-height: 1.2;
+  max-width: 420px;
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 18px;
+  border: none;
+  padding: 15px 10px;
+  border-radius: 30px;
+  box-shadow: 2px 5px 10px #ccc;
+}
+
+@media screen and (max-width:600px) {
+ .btn_fellow{
+   font-size: 14px;
+ } 
+}
+
+.btn_fellow a{
+  color: #001c39;
+  text-decoration: none;
+}
+
+.btn_fellow a:hover{
+  color: #001c39;
+  text-decoration: none;
+}
